data/derived/fa15/progs/unify/prog2958.ml.out
Characters 42-51:
  let rec digitsOfInt n = digitsOfIntHelper (n >= 10);;
                                            ^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
